Remove boilerplate